# garjan

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md  ROADMAP.md  benchmarks.md
benches/: benchmarks.rs
docs/architecture/: adr-001-modal-synthesis.md  adr-002-dual-code-paths.md  adr-003-scope-boundaries.md  adr-004-deterministic-synthesis.md  overview.md
docs/development/: dependency-watch.md  integration-guide.md  roadmap.md  threat-model.md
docs/guides/: testing.md
examples/: combat_impacts.rs  error_handling.rs  forest_ambience.rs  logging.rs  weather_scene.rs
src/: aero.rs  bridge.rs  bubble.rs  builder.rs  cloth.rs  contact.rs  creak.rs  creature.rs  dsp.rs  error.rs  fire.rs  foliage.rs  footstep.rs  friction.rs  impact.rs  insect.rs  lib.rs  lod.rs  material.rs  math.rs  modal.rs  precipitation.rs  rng.rs  rolling.rs  surf.rs  texture.rs  underwater.rs  voice.rs  water.rs  weather.rs  whistle.rs  whoosh.rs  wingflap.rs
src/integration/: soorat.rs
tests/: integration.rs
