[package]
name = "garjan"
version = "0.5.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "garjan — Environmental and nature sound synthesis: thunder, rain, wind, fire, impacts, ambience"
homepage = "https://github.com/MacCracken/garjan"
repository = "https://github.com/MacCracken/garjan"
readme = "README.md"
documentation = "https://docs.rs/garjan"
keywords = ["environment", "sound", "synthesis", "nature", "ambience"]
categories = ["multimedia::audio"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
libm = "0.2"
naad = { version = "1", optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[features]
default = ["std", "naad-backend"]
full = ["std", "naad-backend"]
std = ["serde/std", "thiserror/std"]
naad-backend = ["dep:naad", "std"]

[[bench]]
name = "benchmarks"
harness = false
